--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: FGGC
 ---
 
 <div id="home">
-  <h1>FGGC</h1>
-  <h2>Onitsha</h2>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
