--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 layout: default
 title: Home
 ---
-
+<div>
+	<h1>Reunion Announcment &amp; Dates</h1>
+</div>
 <div id="home">
-  <ul class="posts">
+  <div class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		<h2>{{ post.title }}</h2>
+		<h4>{{ post.date | date_to_string }}</h4>
     {% endfor %}
-  </ul>
+  </div>
 </div>
