--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Home
     {% for post in site.posts %}
 		<h2>{{ post.title }}</h2>
 		<h4>{{ post.date | date_to_string }}</h4>
+		<!-- <p>{{ post.content }}</p> -->
     {% endfor %}
   </div>
 </div>
