--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 <div id="home">
   <div class="posts">
     {% for post in site.posts %}
-		<h2>{{ post.title }}</h2>
+		<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 		<h4>{{ post.date | date_to_string }}</h4>
 		<!-- <p>{{ post.content }}</p> -->
     {% endfor %}
