--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
   <div class="posts">
     {% for post in site.posts %}
 		<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-		<h4>{{ post.date | date_to_string }}</h4>
+		<small>{{ post.date | date_to_string }}</small>
 		<!-- <p>{{ post.content }}</p> -->
     {% endfor %}
   </div>
