menu and place holder pic

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Home
 ---
+<div class="banner">
+	<img src="images/banner1.jpg">
+</div>
 <div>
 	<h1>Reunion Announcment &amp; Dates</h1>
 </div>
