--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 layout: default
 title: Home
 ---
-<div class="banner">
-	<img src="images/banner1.jpg">
-</div>
-<div>
-	<h1>Reunion Announcment &amp; Dates</h1>
-</div>
+
+<ul class="bxslider">
+  <li><img src="/images/b1.jpg" /></li>
+  <li><img src="/images/b2.jpg" /></li>
+  <li><img src="/images/b3.jpg" /></li>
+  <li><img src="/images/b4.jpg" /></li>
+  <li><img src="/images/b5.jpg" /></li>
+  <li><img src="/images/b6.jpg" /></li>
+  <li><img src="/images/b7.jpg" /></li>
+  <li><img src="/images/b8.jpg" /></li>
+  <li><img src="/images/b9.jpg" /></li>
+  <li><img src="/images/b10.jpg" /></li>
+  <li><img src="/images/b11.jpg" /></li>
+  <li><img src="/images/b12.jpg" /></li>
+  <li><img src="/images/b13.jpg" /></li>
+  <li><img src="/images/b14.jpg" /></li>
+  <li><img src="/images/b15.jpg" /></li>
+  <li><img src="/images/b16.jpg" /></li>
+  <li><img src="/images/b17.jpg" /></li>
+  <li><img src="/images/b18.jpg" /></li>
+  <li><img src="/images/b19.jpg" title="FGGC Alumni Reunion" /></li>
+</ul>
 <div id="home">
   <div class="posts">
     {% for post in site.posts %}
