--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ title: Home
     {% for post in site.posts %}
 		<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 		<small>{{ post.date | date_to_string }}</small>
+		<p>{{ post.excerpt }}</p>
+
 		<!-- <p>{{ post.content }}</p> -->
     {% endfor %}
   </div>
