--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
   <li><img src="/images/b16.jpg" /></li>
   <li><img src="/images/b17.jpg" /></li>
   <li><img src="/images/b18.jpg" /></li>
-  <li><img src="/images/b19.jpg" title="FGGC Alumni Reunion" /></li>
+  <li><img src="/images/b19.jpg" /></li>
 </ul>
 <div id="home">
   <div class="posts">
